# matrix

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  conanfile.py
d2l-zh/pytorch/chapter_appendix-tools-for-deep-learning/: aws.ipynb
doc/ebook/deeplearning/pytorch/chapter_appendix-tools-for-deep-learning/: aws.ipynb  contributing.ipynb
doc/kernel/mm/: buddy_system.md  kermel_mm_init.md  kernel malloc.md  kmem_cache.md  malloc.md
hooks/: commit-msg  pre-commit
scripts/: build.sh  env.sh  init_workspace.sh
src/: CMakeLists.txt  main.py
src/include/: matrix.h
src/share/pkgconfig/: eigen3.pc
src/test/: CMakeLists.txt
src/test/cpp/: CMakeLists.txt  main.cpp
src/test/cpp/include/: test_concept.h  test_coroutine.h  test_format.h  test_generator.h
src/test/cpp/src/: test_coroutine.cpp  test_format.cpp  test_generator.cpp
src/test/cuda/: CMakeLists.txt  main.cu
src/test/cuda/include/: helper.cuh  helper.h  matmul.cuh  sum_matrix.h
src/test/cuda/src/: matmul.cu  sum_matrix.cu
src/test/deeplearn/: cifar-10.py  googLeNet.py
src/test/deeplearn/linear/: linear-regression-scratch.py  soft_max.py
src/test/eigen/: CMakeLists.txt
src/test/eigen/sum_matrix/: CMakeLists.txt  demo.h  sum_matrix.cpp  sum_matrix.h
src/test/fork/: CMakeLists.txt  main.cpp
src/test/openmp/: CMakeLists.txt  atomic.cpp  barriar.cpp  critical.cpp  if.cpp  parallel.cpp  parallel_for.cpp  parallel_section.cpp  parallel_signal_master.cpp  private.cpp  reduction.cpp  shared.cpp  threadprivate.cpp
src/test/t02284/: CMakeLists.txt  main.cpp
src/test/thread/: CMakeLists.txt  main.cpp
src/test/thread/include/thread/: memory_barrier.h  mul_thread_error.h
src/test/thread/src/: memory_barrier.cpp  mul_thread_error.cpp
src/tool/: math.py  utils.py
